# python-mecab-ko

./: .gitignore  .readthedocs.yml  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_wheels.yml  wheels.yml
docs/: api.md  index.md  install.md  requirements.txt
docs/stylesheets/: extra.css
docs/usage/: advanced.md  basic.md  cli.md  custom-vocabulary.md  dictionary.md
examples/: user_dictionary.py
mecab/: __init__.py  __main__.py  mecab.py  types.py  utils.py
mecab/pybind/: _mecab.cpp  build.sh  run.py
mecab/pybind/_mecab/: _mecab.cpp  cli.cpp  dictionaryinfo.cpp  lattice.cpp  node.cpp  path.cpp  tagger.cpp  utils.cpp  utils.h
scripts/: build-mecab-ko.py  cibw_before_all.sh  cibw_before_build.sh  install-mecab-ko.py  install-mecab.py  install_mecab_ko.py  repair_wheel.py  repair_wheel_windows.py
tests/: conftest.py  corpus.txt  test_memory_leak.py  test_morphs.py  test_nouns.py  test_parse.py  test_pos.py  test_user_dictionary.py
