[metadata]
name = python-mecab-ko
version = attr: mecab.__version__
url = https://github.com/jonghwanhyeon/python-mecab-ko
author = Jonghwan Hyeon
author_email = jonghwanhyeon93@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: Korean
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Text Processing
    Topic :: Text Processing :: Linguistic
license = BSD 3-Clause License
description = A python binding for mecab-ko
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    mecab
    mecab-ko

[options]
zip_safe = False
install_requires = mecab_ko_dic
python_requires = >=3.7
packages = find:

[options.package_data]
mecab =
    mecabrc
    pybind/_mecab/utils.h

[options.data_files]
scripts =
    scripts/install-mecab-ko.py